src/test/ui/const-generics/infer/method-chain.full.stderr
error[E0282]: type annotations needed
  --> $DIR/method-chain.rs:21:33
   |
LL |     Foo.bar().bar().bar().bar().baz();
   |                                 ^^^ cannot infer the value of const parameter `N` declared on the associated function `baz`
   |
help: consider specifying the const argument
   |
LL |     Foo.bar().bar().bar().bar().baz::<N>();
   |                                 ^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
